2004-04-20  Karl Berry  <karl@gnu.org>

	* makeinfo/tests/copying: force POSIX language setting.

2004-04-19  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_code): use <samp> for commands other than
	@code, so we get typewriter output; and add `...'
	for @samp.
	Report from: John Blevin <blevin@lucent.com>, 
	16 Apr 2004 11:40:01 -0400.

	* makeinfo/html.c (html_output_head) [CSS_FONT_ROMAN,
	CSS_FONT_SMALL_CAPS]: prettify.

2004-04-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\Orb): define if undefined.
	Report from Laurent Siebenmann.

	* util/dir-example: diff updates.

2004-04-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: remove trailing blanks.  suggestion from Jim.

2004-04-12  Paul Eggert  <eggert@twinsun.com>

	* doc/Makefile.am (info.1, infokey.1, install-info.1,
	makeinfo.1, texi2dvi.1, texindex.1): Don't use $< in ordinary
	rules; it's not portable.
	* util/Makefile.am (texinfo.cat): Likewise.

2004-04-12  Karl Berry  <karl@gnu.org>

	* bootstrap: update from berlios.

2004-04-11  Karl Berry  <karl@gnu.org>

	* Version 4.7.

2004-04-09  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (execute_string): do not free the temporary copy
	of input_filename until we're definitely done with
	it.  It is used in line_error, etc.

	* INSTALL: mention texinfo.tex install step.

	* util/Makefile.am (texinfo.cat): new name instead of just
		`catalog'.  rename files.
	* util/Makefile.am (EXTRA_DIST): texinfo-cat.in now, not
		catalog.in.

2004-04-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (begin_insertion): after @copying, do not
	discard until a newline if we are looking at one.
	(end_insertion): decrement input line number after @end copying.

2004-04-08  Karl Berry  <karl@gnu.org>

	* util/Makefile.am: doc fix, as automake.diff is no longer needed.

2004-04-07  Karl Berry  <karl@gnu.org>

	* pretest version 4.6.95.
	
	* doc/texinfo.tex (\dodonode): new macro to remove trailing comma.
	(\donode): call it, after removing space-comma.