@@ -3,7 +3,8 @@ file ginfo
 end
 
 set env MALLOC_CHECK_ 2
-set env INFOPATH :/usr/local/info
+#set env INFOPATH :/usr/local/info
 set env TERM xterm
 
-set args --restore $ttests/setscreen.drib
+#set args --restore $ttests/setscreen.drib
+set args somedoc
